last minute changes

--- a/jupyter_notebooks/trying_other_methods.ipynb
+++ b/jupyter_notebooks/trying_other_methods.ipynb
@@ -225,13 +225,13 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('data/challenge_1_gut_microbiome_data.csv')\n",
+    "df = pd.read_csv('../data/challenge_1_gut_microbiome_data.csv')\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -19290,7 +19290,7 @@
        "[5 rows x 1094 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -19331,7 +19331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -19345,7 +19345,7 @@
        "Name: disease, dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -19357,29 +19357,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-7-c77afe4adc21>:15: SettingWithCopyWarning: \n",
+      "<ipython-input-6-c77afe4adc21>:15: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  labels[i] = 2\n",
-      "<ipython-input-7-c77afe4adc21>:11: SettingWithCopyWarning: \n",
+      "<ipython-input-6-c77afe4adc21>:11: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  labels[i] = 0\n",
-      "<ipython-input-7-c77afe4adc21>:13: SettingWithCopyWarning: \n",
+      "<ipython-input-6-c77afe4adc21>:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  labels[i] = 1\n",
-      "<ipython-input-7-c77afe4adc21>:17: SettingWithCopyWarning: \n",
+      "<ipython-input-6-c77afe4adc21>:17: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -19397,7 +19397,7 @@
        "Name: disease, dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -19426,7 +19426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -19569,6 +19569,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.metrics import cohen_kappa_score, f1_score\n",
     "\n",
     "train = []\n",
@@ -19730,7 +19731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19779,7 +19780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -19875,11 +19876,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.metrics import cohen_kappa_score, f1_score\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
     "train = []\n",
     "test = []\n",
@@ -19921,7 +19923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -19929,27 +19931,27 @@
      "output_type": "stream",
      "text": [
       "Test\n",
-      "k: 4 - ck_score: 0.4119200490525934 - f1_score: 0.611050852608555\n",
+      "k: 4 - ck_score: 0.4925497150723326 - f1_score: 0.6669054573928355\n",
       "Test\n",
-      "k: 5 - ck_score: 0.4692283094815475 - f1_score: 0.6446657713103567\n",
+      "k: 5 - ck_score: 0.5015334284630129 - f1_score: 0.6726350231233402\n",
       "Test\n",
-      "k: 6 - ck_score: 0.4776167598821147 - f1_score: 0.6503384137950192\n",
+      "k: 6 - ck_score: 0.5058293477218425 - f1_score: 0.6769494348080924\n",
       "Test\n",
-      "k: 7 - ck_score: 0.48956241712445536 - f1_score: 0.6553867002070844\n",
+      "k: 7 - ck_score: 0.4758983626883352 - f1_score: 0.6561659418124616\n",
       "Test\n",
-      "k: 8 - ck_score: 0.5063696986648216 - f1_score: 0.6673876200919276\n",
+      "k: 8 - ck_score: 0.4986441443401054 - f1_score: 0.6708380112388168\n",
       "Test\n",
-      "k: 9 - ck_score: 0.5273962360111052 - f1_score: 0.6783368794741081\n",
+      "k: 9 - ck_score: 0.5037942949130537 - f1_score: 0.6744083735127163\n",
       "Test\n",
-      "k: 10 - ck_score: 0.5119462959450034 - f1_score: 0.6691543652457851\n",
+      "k: 10 - ck_score: 0.505256171215956 - f1_score: 0.6747474326555586\n",
       "Test\n",
-      "k: 11 - ck_score: 0.5238614134640002 - f1_score: 0.678976846689008\n",
+      "k: 11 - ck_score: 0.49721875260221493 - f1_score: 0.6709527290079209\n",
       "Test\n",
-      "k: 12 - ck_score: 0.5347268751179546 - f1_score: 0.6897285753437155\n",
+      "k: 12 - ck_score: 0.49447147003379033 - f1_score: 0.6683068810042707\n",
       "Test\n",
-      "k: 13 - ck_score: 0.5408213974369233 - f1_score: 0.69363550977518\n",
+      "k: 13 - ck_score: 0.480493851446969 - f1_score: 0.659215672375736\n",
       "Test\n",
-      "k: 14 - ck_score: 0.5363582525159025 - f1_score: 0.6913313980111183\n"
+      "k: 14 - ck_score: 0.4987822405944654 - f1_score: 0.6710651190446728\n"
      ]
     }
    ],
