--- a/jupyter_notebooks/understanding_data.ipynb
+++ b/jupyter_notebooks/understanding_data.ipynb
@@ -223,7 +223,7 @@
     }
    ],
    "source": [
-    "df = pandas.read_csv('data/challenge_1_gut_microbiome_data.csv')\n",
+    "df = pandas.read_csv('../data/challenge_1_gut_microbiome_data.csv')\n",
     "df.head()"
    ]
   },
